IaC/kubernetes/apps/base/network/istio-config/app/policies/ingress-gateway-peerauthentication.yml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: envoy-external-ingress
  namespace: network
  labels:
    app.kubernetes.io/name: envoy-external-ingress-peerauthentication
    app.kubernetes.io/component: service-mesh
    app.kubernetes.io/part-of: helix-platform
    app.kubernetes.io/managed-by: fluxcd
    helix.ai/component: service-mesh
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  portLevelMtls:
    "80":
      mode: DISABLE
    "443":
      mode: DISABLE
