IaC/kubernetes/apps/base/network/istio-config/app/policies/authorizationpolicy-allow.yml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: envoy-external-allow-cluster
  namespace: network
  labels:
    app.kubernetes.io/name: envoy-external-allow-cluster
    app.kubernetes.io/component: service-mesh
    app.kubernetes.io/part-of: helix-platform
    app.kubernetes.io/managed-by: fluxcd
    helix.ai/component: service-mesh
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: ALLOW
  rules:
    - from:
        - source:
            ipBlocks:
              - "${CLUSTER_CIDR}"
      to:
        - operation:
            ports: ["443"]
